solve z-index problem (cards and contactForm)

--- a/src/scss/components/_contactForm.scss
+++ b/src/scss/components/_contactForm.scss
@@ -1,4 +1,5 @@
 .contactForm {
+    z-index: 5;
     display: none;
     &.active {
         display: block;
